# squashfs-archive-helper

./: .gitignore  AGENTS.md  DESIGN.md  LICENSE  Makefile  README.md  REPRODUCIBLE_BUILDS.md  TODO.md  flake.nix  install.sh  pyproject.toml  squashfs-actions.desktop  squish.sh
.github/workflows/: build.yml
assets/: install.sh  squashfs-actions.desktop
src/: entry.py  squish.sh  unsquish.sh
src/mount_squashfs/: cli.py  config.py  core.py  errors.py  tracking.py
src/squish/: __init__.py  build.py  checksum.py  cli.py  command_executor.py  config.py  core.py  dependencies.py  dependency_injection.py  errors.py  extract.py  list.py  logging.py  mock_factory.py  mounting.py  observer.py  path_utils.py  progress.py  tool_adapters.py  tracking.py  version.py
tests/: FIXTURE_DOCUMENTATION.md  TEST_DESIGN.md  __init__.py  conftest.py  test_build.py  test_checksum.py  test_cli.py  test_command_executor.py  test_config.py  test_core.py  test_dependencies.py  test_dependency_injection.py  test_dependency_patterns.py  test_errors.py  test_extract.py  test_list.py  test_logging.py  test_mock_factory.py  test_mounting.py  test_observer.py  test_path_utils.py  test_progress.py  test_tool_adapters.py  test_tracking.py
