[project]
name = "squish"
description = "SquashFS archive management tool - build, mount, unmount, and list SquashFS archives"
version = "1.1.0"
requires-python = ">=3.13"
dependencies = [
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "radon>=6.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = "--cov=src/squish --cov-report=term-missing --cov-branch -v"
filterwarnings = "ignore::DeprecationWarning"
