[project]
name = "squish"
description = "SquashFS archive management tool for working with SquashFS archives"
version = "1.3.1"
requires-python = ">=3.13"
dependencies = ["toml>=0.10.2"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
filterwarnings = "ignore::DeprecationWarning"

markers = [
  "slow: marks tests as slow (deselect with '-m not slow')",
  "integration: marks integration tests (deselect with '-m not integration')",
  "unit: marks unit tests (deselect with '-m not unit')",
  "regression: marks regression tests for known issues",
  "coverage: marks tests specifically targeting coverage gaps",
  "edge_case: marks tests for edge cases and boundary conditions",
  "performance: marks performance-sensitive tests",
  "requires_zenity: marks tests that require Zenity for GUI features",
  "requires_sudo: marks tests that require sudo privileges",
  "network: marks tests that require network access",
]

[dependency-groups]
dev = [
  "prettier>=0.0.7",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "radon>=6.0.1",
  "ruff>=0.15.1",
  "ty>=0.0.17",
]

main = ["toml>=0.10.2"]
